# littleorange-video-mcp

./: .gitignore  Combined_Documentation.md  MCP运行说明.md  PR_DESCRIPTION_v0.0.2.md  README.md  RELEASE_NOTES_v0.0.2.md  littleorange_video_config.json  pyproject.toml  run_server.py
littleorange_video_mcp/: api_catalog.json  autopoll.py  catalog.py  client.py  config.py  server.py
scripts/: refresh_catalog.py
tests/: test_catalog_and_client.py
video_ai_mcp/: autopoll.py  catalog.py  client.py  server.py
