[project]
name = "littleorange-video-mcp"
version = "0.0.3"
description = "MCP server for LittleOrange video model APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.6.0",
  "httpx>=0.28.1",
  "jsonschema>=4.23.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
littleorange-video-mcp = "littleorange_video_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
littleorange_video_mcp = ["api_catalog.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
